--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "scripts": {
     "test": "xo",
     "start": "electron .",
-    "build": "electron-packager . --out=dist --asar --overwrite --all"
+    "build": "electron-packager . --out=dist --asar --overwrite --all",
+    "genkey": "node ./shell/genKey.js"
   },
   "files": [
     "index.js",
@@ -24,7 +25,10 @@
     "electron"
   ],
   "dependencies": {
-    "electron-debug": "^1.0.0"
+    "electron-debug": "^1.0.0",
+    "qrcode": "^1.3.3",
+    "sjcl": "^1.0.8",
+    "wechaty": "^0.22.6"
   },
   "devDependencies": {
     "devtron": "^1.1.0",
