--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "electron-debug": "^1.0.0",
     "qrcode": "^1.3.3",
     "sjcl": "^1.0.8",
-    "wechaty": "^0.22.6"
+    "wechat4u": "^0.7.7"
   },
   "devDependencies": {
     "devtron": "^1.1.0",
