--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "test": "xo",
     "start": "electron .",
-    "build": "electron-packager . --out=dist --asar --overwrite --all",
+    "build": "electron-packager . --out=dist --asar --overwrite",
     "genkey": "node ./shell/genKey.js"
   },
   "files": [
@@ -32,8 +32,8 @@
   },
   "devDependencies": {
     "devtron": "^1.1.0",
-    "electron-packager": "^8.0.0",
-    "electron": "^1.3.3",
+    "electron": "^4.0.8",
+    "electron-packager": "^13.1.1",
     "xo": "^0.16.0"
   },
   "xo": {
